--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
       <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
-          <a href="#" class="header__link">Узнать&rarr;</a>
+          <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
         
       <img class="header__main-illustration" src="./images/header-image.png" alt="upset boy">
@@ -181,6 +181,13 @@
 
       </section>
       <section class="feynman">
+
+        <h2 class="feyman__title">Метод феймана</h2>
+
+        <p class="feynman__sub-title">Выучить и не забыть.</p>
+
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+
       </section>
 
       <section class="kaufman">
