--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
       <section class="digits">
         
-        <h2 class="digits__section-title">Цифры и факты</h2>
+        <h2 class="section-title">Цифры и факты</h2>
 
-        <p class="digits__section-subtitle">Про учебу и мозг</p>
+        <p class="section-subtitle">Про учебу и мозг</p>
 
-        <table class="digits__table">
+        <table class="table">
 
-          <tr class="digits__table_flex-row">
+          <tr class="table__row">
 
             <td class="table__cell">
 
@@ -121,7 +121,7 @@
             </td>
 
           </tr>
-          <tr class="digits__table_flex-row">
+          <tr class="table__row">
 
             <td class="table__cell">
 
@@ -191,6 +191,113 @@
       </section>
 
       <section class="kaufman">
+
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+
+        <table class="table table_theme_dark">
+
+          <tr class="table__row table__row_theme_dark">
+
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">
+                1
+              </h3>
+              <p class="table__text table__text_theme_dark">
+                Выберите привлекательный проект.
+              </p>
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">
+                2
+              </h3>
+              <p class="table__text table__text_theme_dark">
+                Сосредоточьтесь на каком-то одном навыке.
+              </p>
+
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">
+                3
+              </h3>
+              <p class="table__text table__text_theme_dark">
+                Определите целевой уровень мастерства.
+              </p>
+
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">
+                4
+              </h3>
+              <p class="table__text table__text_theme_dark">
+                Разбейте навык на элементы.
+              </p>
+
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">
+                5
+              </h3>
+              <p class="table__text table__text_theme_dark">
+                Приготовьте все необходимое для занятий.
+              </p>
+
+            </td>
+
+          </tr>
+          <tr class="table__row table__row_theme_dark">
+
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">
+                6
+              </h3>
+              <p class="table__text table__text_theme_dark">
+                Устраните препятствия для занятий.
+              </p>
+
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">
+                7
+              </h3>
+              <p class="table__text table__text_theme_dark">
+                Выделите специальное время для занятий.
+              </p>
+
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">
+                8
+              </h3>
+              <p class="table__text table__text_theme_dark">
+                Создайте быстрые петли обратной связи.
+              </p>
+
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">
+                9
+              </h3>
+              <p class="table__text table__text_theme_dark">
+                Занимайтесь по расписанию, короткими интенсивными интервалами.
+              </p>
+
+            </td>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">
+                10
+              </h3>
+              <p class="table__text table__text_theme_dark">
+                Уделяйте внимание количеству и скорости.
+              </p>
+
+            </td>
+
+          </tr>
+
+        </table>
+        <img src="./images/kaufman-triangle.svg" alt="Blue triangle" class="kaufman__triangle">
       </section>
     </main>
     <footer class="footer">
