--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-          <a href="#" class="header__link">Узнать &rarr;</a>
+          <a href="#" class="header__link page_link">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Ученик Практикума не сдал с первого раза проектную работу">
       <div class="header__square-pic page_rotation">
@@ -111,6 +111,11 @@
           </div>
         </div>
       </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__sub-title">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link page_link">Подробнее &rarr;</a>
+      </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
@@ -187,10 +192,30 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__sub-title">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">
+            Салман Хан
+          </h3>
+          <h2 class="khan__title">
+            Весь мир — школа
+          </h2>
+          <p class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </p>
+          <h4 class="khan__quote-author">
+            Джордж Лукас
+          </h4>
+          <p class="khan__quote-author-subline">
+            Кинорежиссер, продюсер
+          </p>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.jpg" alt="Обложка книги Весь мир - школа. Автор - Салман Хан" class="khan__book-pic">
+            <a href="#" class="khan__buy-link page_link">
+              Купить книгу &rarr;
+            </a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -279,6 +304,20 @@
         </ul>
         <div class="kaufman__triangle page_rotation"></div>
       </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a href="" class="page_link"><img src="./images/resources-arzamas.svg" alt="Логотип Арзамас" class="resources__logo"></a>
+          <a href="" class="page_link"><img src="./images/resources-n1.svg" alt="Логотип N+1" class="resources__logo"></a>
+          <a href="" class="page_link"><img src="./images/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo"></a>
+          <a href="" class="page_link"><img src="./images/resources-polka.svg" alt="Логотип Полка" class="resources__logo"></a>
+
+
+
+
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__colums">
@@ -294,9 +333,9 @@
             О Практикуме
           </h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#">Главная</a></li>
-            <li><a class="footer__column-link" href="#">Концепция</a></li>
-            <li><a class="footer__column-link" href="#">Наставники</a></li>
+            <li><a class="footer__column-link page_link" href="#">Главная</a></li>
+            <li><a class="footer__column-link page_link" href="#">Концепция</a></li>
+            <li><a class="footer__column-link page_link" href="#">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
@@ -305,17 +344,17 @@
           </h3>
           <ul class="footer__column-links">
             <li>
-              <a class="footer__column-link" href="#">
+              <a class="footer__column-link page_link" href="#">
                 <img src="./images/facebook_color_white.svg" alt="Логотип Фейсбук" class="footer__social-icon">Facebook
               </a>
           </li>
             <li>
-              <a class="footer__column-link" href="#">
+              <a class="footer__column-link page_link" href="#">
                 <img src="./images/vk_color_white.svg" alt="Логотип ВКонтакте" class="footer__social-icon">ВКонтакте
               </a>
             </li>
             <li>
-              <a class="footer__column-link" href="#">
+              <a class="footer__column-link page_link" href="#">
                 <img src="./images/facebook_color_white.svg" alt="Логотип Инстаграм" class="footer__social-icon">Instagram
               </a>
             </li>
