Раскидал стили по БЭМ

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__colums">
+      <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer">
           </div>
