--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-          <a href="#" class="header__link page_link">Узнать &rarr;</a>
+          <a href="#" class="header__link link">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Ученик Практикума не сдал с первого раза проектную работу">
-      <div class="header__square-pic page_rotation">
+      <div class="header__square-pic rotation">
       </div>
     </header>
     <main class="content">
@@ -113,7 +113,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__sub-title">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link page_link">Подробнее &rarr;</a>
+        <a href="#" class="feynman__link link">Подробнее &rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -210,7 +210,7 @@
           </p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="Обложка книги Весь мир - школа. Автор - Салман Хан" class="khan__book-pic">
-            <a href="#" class="khan__buy-link page_link">
+            <a href="#" class="khan__buy-link link">
               Купить книгу &rarr;
             </a>
           </div>
@@ -301,20 +301,16 @@
             </p>
           </li>
         </ul>
-        <div class="kaufman__triangle page_rotation"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a href="" class="page_link"><img src="./images/resources-arzamas.svg" alt="Логотип Арзамас" class="resources__logo"></a>
-          <a href="" class="page_link"><img src="./images/resources-n1.svg" alt="Логотип N+1" class="resources__logo"></a>
-          <a href="" class="page_link"><img src="./images/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo"></a>
-          <a href="" class="page_link"><img src="./images/resources-polka.svg" alt="Логотип Полка" class="resources__logo"></a>
-
-
-
-
+          <a href="" class="link"><img src="./images/resources-arzamas.svg" alt="Логотип Арзамас" class="resources__logo"></a>
+          <a href="" class="link"><img src="./images/resources-n1.svg" alt="Логотип N+1" class="resources__logo"></a>
+          <a href="" class="link"><img src="./images/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo"></a>
+          <a href="" class="link"><img src="./images/resources-polka.svg" alt="Логотип Полка" class="resources__logo"></a>
         </div>
       </section>
     </main>
@@ -332,9 +328,9 @@
             О Практикуме
           </h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link page_link" href="#">Главная</a></li>
-            <li><a class="footer__column-link page_link" href="#">Концепция</a></li>
-            <li><a class="footer__column-link page_link" href="#">Наставники</a></li>
+            <li><a class="footer__column-link link" href="#">Главная</a></li>
+            <li><a class="footer__column-link link" href="#">Концепция</a></li>
+            <li><a class="footer__column-link link" href="#">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
@@ -343,17 +339,17 @@
           </h3>
           <ul class="footer__column-links">
             <li>
-              <a class="footer__column-link page_link" href="#">
+              <a class="footer__column-link link" href="#">
                 <img src="./images/facebook_color_white.svg" alt="Логотип Фейсбук" class="footer__social-icon">Facebook
               </a>
           </li>
             <li>
-              <a class="footer__column-link page_link" href="#">
+              <a class="footer__column-link link" href="#">
                 <img src="./images/vk_color_white.svg" alt="Логотип ВКонтакте" class="footer__social-icon">ВКонтакте
               </a>
             </li>
             <li>
-              <a class="footer__column-link page_link" href="#">
+              <a class="footer__column-link link" href="#">
                 <img src="./images/facebook_color_white.svg" alt="Логотип Инстаграм" class="footer__social-icon">Instagram
               </a>
             </li>
