--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-          <a href="#" class="header__link link">Узнать &rarr;</a>
+          <a href="#" class="header__link link" target="_blank">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Ученик Практикума не сдал с первого раза проектную работу">
       <div class="header__square-pic rotation">
@@ -24,7 +24,7 @@
       <section class="description">
         <div class="two-colums">
           <h2 class="two-colums__brief">
-            Главные проблемы<br>в обучении
+            Главные проблемы в обучении
           </h2>
           <div class="two-colums__main-text">
             <p class="two-colums__paragraph ">
@@ -42,8 +42,8 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <div class="cards">
-          <div class="cards__item">
+        <ul class="cards">
+          <li class="cards__item">
             <img src="./images/cards-attention.png" alt="Книга 101 эссе, которые изменят ваше мышление" class="cards__image">
             <h3 class="cards__title">
               Два вида внимания
@@ -51,8 +51,8 @@
             <p class="cards__description">
               Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img src="./images/cards-recall.png" alt="Статуя вспоминающего мальчика" class="cards__image">
             <h3 class="cards__title">
               Recall
@@ -60,8 +60,8 @@
             <p class="cards__description">
               Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img src="./images/cards-interliving.png" alt="Музей-мемориал 9/11 в США" class="cards__image">
             <h3 class="cards__title">
               Интерливинг
@@ -69,8 +69,8 @@
             <p class="cards__description">
               Изучайте несколько навыков одновременно, они обогащают друг друга.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img src="./images/cards-question.png" alt="Человек внутри высокой и просторной конструкции с масой окон и несколькими арками" class="cards__image">
             <h3 class="cards__title">
               Вопросы
@@ -78,8 +78,8 @@
             <p class="cards__description">
               Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img src="./images/cards-competence.png" alt="Стопка книг на руке" class="cards__image">
             <h3 class="cards__title">
               Иллюзия компетентности
@@ -87,21 +87,21 @@
             <p class="cards__description">
               Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
             </p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
         <div class="two-colums">
           <h2 class="two-colums__brief">
-            История Барбары<br>Оакли.
+            История Барбары Оакли.
           </h2>
           <div class="two-colums__main-text">
             <p class="two-colums__paragraph ">
@@ -112,8 +112,8 @@
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__sub-title">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link link">Подробнее &rarr;</a>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link link" target="_blank">Подробнее &rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -193,24 +193,24 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <h3 class="khan__author">
+          <p class="khan__author">
             Салман Хан
-          </h3>
+          </p>
           <h2 class="khan__title">
             Весь мир — школа
           </h2>
-          <p class="khan__quote">
+          <blockquote class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
-          </p>
-          <h4 class="khan__quote-author">
+          </blockquote>
+          <p class="khan__quote-author">
             Джордж Лукас
-          </h4>
+          </p>
           <p class="khan__quote-author-subline">
             Кинорежиссер, продюсер
           </p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="Обложка книги Весь мир - школа. Автор - Салман Хан" class="khan__book-pic">
-            <a href="#" class="khan__buy-link link">
+            <a href="#" target= "_blank" class="khan__buy-link link" target="_blank">
               Купить книгу &rarr;
             </a>
           </div>
@@ -307,10 +307,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a href="" class="link"><img src="./images/resources-arzamas.svg" alt="Логотип Арзамас" class="resources__logo"></a>
-          <a href="" class="link"><img src="./images/resources-n1.svg" alt="Логотип N+1" class="resources__logo"></a>
-          <a href="" class="link"><img src="./images/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo"></a>
-          <a href="" class="link"><img src="./images/resources-polka.svg" alt="Логотип Полка" class="resources__logo"></a>
+          <a href="" class="link" target="_blank"><img src="./images/resources-arzamas.svg" alt="Логотип Арзамас" class="resources__logo"></a>
+          <a href="" class="link" target="_blank"><img src="./images/resources-n1.svg" alt="Логотип N+1" class="resources__logo"></a>
+          <a href="" class="link" target="_blank"><img src="./images/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo"></a>
+          <a href="" class="link" target="_blank"><img src="./images/resources-polka.svg" alt="Логотип Полка" class="resources__logo"></a>
         </div>
       </section>
     </main>
@@ -328,9 +328,9 @@
             О Практикуме
           </h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link link" href="#">Главная</a></li>
-            <li><a class="footer__column-link link" href="#">Концепция</a></li>
-            <li><a class="footer__column-link link" href="#">Наставники</a></li>
+            <li><a class="footer__column-link link" href="#" target="_blank">Главная</a></li>
+            <li><a class="footer__column-link link" href="#" target="_blank">Концепция</a></li>
+            <li><a class="footer__column-link link" href="#" target="_blank">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
@@ -339,17 +339,17 @@
           </h3>
           <ul class="footer__column-links">
             <li>
-              <a class="footer__column-link link" href="#">
+              <a class="footer__column-link link" href="#" target="_blank">
                 <img src="./images/facebook_color_white.svg" alt="Логотип Фейсбук" class="footer__social-icon">Facebook
               </a>
           </li>
             <li>
-              <a class="footer__column-link link" href="#">
+              <a class="footer__column-link link" href="#" target="_blank">
                 <img src="./images/vk_color_white.svg" alt="Логотип ВКонтакте" class="footer__social-icon">ВКонтакте
               </a>
             </li>
             <li>
-              <a class="footer__column-link link" href="#">
+              <a class="footer__column-link link" href="#" target="_blank">
                 <img src="./images/facebook_color_white.svg" alt="Логотип Инстаграм" class="footer__social-icon">Instagram
               </a>
             </li>
