Вторая попытка второго спринта2

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           </p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="Обложка книги Весь мир - школа. Автор - Салман Хан" class="khan__book-pic">
-            <a href="#" target= "_blank" class="khan__buy-link link" target="_blank">
+            <a href="#" target= "_blank" class="khan__buy-link link">
               Купить книгу &rarr;
             </a>
           </div>
